dataset1235/2025-2/2947369575/users/3291858379/executions/1003782500_3455942218.log
== SUBMISSION (2025-08-27 22:54:46)
-- CODE: 
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
valor unitario = float(input("valor unitario do jogo: "))
valor disponivel = float(input("valor diposnivel para a aquisicao dos jogos: "))

# Calculo do valor a ser pago, incluindo o frete:
total = valor unitario * 8 + 45
saldo = valor disponivel - total

# Impressao do valor total e do saldo:
print(round(total, 1))
print(round(saldo, 1))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
File "XXXX", line 5
    valor unitario = float(input("valor unitario do jogo: "))
          ^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
File "XXXX", line 5
    valor unitario = float(input("valor unitario do jogo: "))
          ^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
File "XXXX", line 5
    valor unitario = float(input("valor unitario do jogo: "))
          ^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
File "XXXX", line 5
    valor unitario = float(input("valor unitario do jogo: "))
          ^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
File "XXXX", line 5
    valor unitario = float(input("valor unitario do jogo: "))
          ^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
File "XXXX", line 5
    valor unitario = float(input("valor unitario do jogo: "))
          ^^^^^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 22:57:31)
-- CODE: 
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
unitario = float(input("valor unitario do jogo: "))
disponivel = float(input("valor diposnivel para a aquisicao dos jogos: "))

# Calculo do valor a ser pago, incluindo o frete:
total = unitario * 8 + 45
saldo = disponivel - total

# Impressao do valor total e do saldo:
print(round(total, 1))
print(round(saldo, 1))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
---- user output:
55.0
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
---- user output:
1.0
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
---- user output:
1307.0
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
---- user output:
8059.0
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
---- user output:
15.4
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
---- user output:
195.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 22:42:25)
-- CODE: 
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
valor unitario = float(input("Qual o valor unitario do jogo? "))
valor disponivel = float(input("Qual o valor diposnivel para a aquisicao dos jogos? "))

# Calculo do valor a ser pago, incluindo o frete:
total = valor unitario * 8 + 45
saldo = valor disponivel - total

# Impressao do valor total e do saldo:
print(round(total ,1))
print(round(saldo ,1))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
File "XXXX", line 5
    valor unitario = float(input("Qual o valor unitario do jogo? "))
          ^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
File "XXXX", line 5
    valor unitario = float(input("Qual o valor unitario do jogo? "))
          ^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
File "XXXX", line 5
    valor unitario = float(input("Qual o valor unitario do jogo? "))
          ^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
File "XXXX", line 5
    valor unitario = float(input("Qual o valor unitario do jogo? "))
          ^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
File "XXXX", line 5
    valor unitario = float(input("Qual o valor unitario do jogo? "))
          ^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
File "XXXX", line 5
    valor unitario = float(input("Qual o valor unitario do jogo? "))
          ^^^^^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 22:27:39)
-- CODE: 
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
valor unitario = float(input("Qual o valor unitario do jogo? "))
valor disponivel = float(input("Qual o valor diposnivel para a aquisicao dos jogos? "))

# Calculo do valor a ser pago, incluindo o frete:
total = valor unitario * 8 + 45
saldo = valor disponivel

# Impressao do valor total e do saldo:
print(?????)
print(?????)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
File "XXXX", line 5
    valor unitario = float(input("Qual o valor unitario do jogo? "))
          ^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
File "XXXX", line 5
    valor unitario = float(input("Qual o valor unitario do jogo? "))
          ^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
File "XXXX", line 5
    valor unitario = float(input("Qual o valor unitario do jogo? "))
          ^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
File "XXXX", line 5
    valor unitario = float(input("Qual o valor unitario do jogo? "))
          ^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
File "XXXX", line 5
    valor unitario = float(input("Qual o valor unitario do jogo? "))
          ^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
File "XXXX", line 5
    valor unitario = float(input("Qual o valor unitario do jogo? "))
          ^^^^^^^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 22:52:11)
-- CODE: 
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
valor unitario = float(input("Qual o valor unitario do jogo?: "))
valor disponivel = float(input("Qual o valor diposnivel para a aquisicao dos jogos?: "))

# Calculo do valor a ser pago, incluindo o frete:
total = valor unitario * 8 + 45
saldo = valor disponivel - total

# Impressao do valor total e do saldo:
print(round(total ,1))
print(round(saldo ,1))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
File "XXXX", line 5
    valor unitario = float(input("Qual o valor unitario do jogo?: "))
          ^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
File "XXXX", line 5
    valor unitario = float(input("Qual o valor unitario do jogo?: "))
          ^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
File "XXXX", line 5
    valor unitario = float(input("Qual o valor unitario do jogo?: "))
          ^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
File "XXXX", line 5
    valor unitario = float(input("Qual o valor unitario do jogo?: "))
          ^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
File "XXXX", line 5
    valor unitario = float(input("Qual o valor unitario do jogo?: "))
          ^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
File "XXXX", line 5
    valor unitario = float(input("Qual o valor unitario do jogo?: "))
          ^^^^^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 22:52:32)
-- CODE: 
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
valor unitario = float(input("Qual o valor unitario do jogo?: "))
valor disponivel = float(input("Qual o valor diposnivel para a aquisicao dos jogos?: "))

# Calculo do valor a ser pago, incluindo o frete:
total = valor unitario * 8 + 45
saldo = valor disponivel - total

# Impressao do valor total e do saldo:
print(round(total, 1))
print(round(saldo, 1))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
File "XXXX", line 5
    valor unitario = float(input("Qual o valor unitario do jogo?: "))
          ^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
File "XXXX", line 5
    valor unitario = float(input("Qual o valor unitario do jogo?: "))
          ^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
File "XXXX", line 5
    valor unitario = float(input("Qual o valor unitario do jogo?: "))
          ^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
File "XXXX", line 5
    valor unitario = float(input("Qual o valor unitario do jogo?: "))
          ^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
File "XXXX", line 5
    valor unitario = float(input("Qual o valor unitario do jogo?: "))
          ^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
File "XXXX", line 5
    valor unitario = float(input("Qual o valor unitario do jogo?: "))
          ^^^^^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 22:21:33)
-- CODE: 
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
????? = float(input("Qual o valor unitario do jogo? "))
????? = float(input("Qual o valor diposnivel para a aquisicao dos jogos? "))

# Calculo do valor a ser pago, incluindo o frete:
total = ?????
saldo = ???

# Impressao do valor total e do saldo:
print(?????)
print(?????)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
File "XXXX", line 5
    ????? = float(input("Qual o valor unitario do jogo? "))
    ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
File "XXXX", line 5
    ????? = float(input("Qual o valor unitario do jogo? "))
    ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
File "XXXX", line 5
    ????? = float(input("Qual o valor unitario do jogo? "))
    ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
File "XXXX", line 5
    ????? = float(input("Qual o valor unitario do jogo? "))
    ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
File "XXXX", line 5
    ????? = float(input("Qual o valor unitario do jogo? "))
    ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
File "XXXX", line 5
    ????? = float(input("Qual o valor unitario do jogo? "))
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 22:55:10)
-- CODE: 
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
valor unitario = float(input("valor unitario do jogo: "))
valor disponivel = float(input("valor diposnivel para a aquisicao dos jogos: "))

# Calculo do valor a ser pago, incluindo o frete:
total = valor unitario * 8 + 45
saldo = valor disponivel - total

# Impressao do valor total e do saldo:
print(round(total, 1))
print(round(saldo, 1))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
File "XXXX", line 5
    valor unitario = float(input("valor unitario do jogo: "))
          ^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
File "XXXX", line 5
    valor unitario = float(input("valor unitario do jogo: "))
          ^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
File "XXXX", line 5
    valor unitario = float(input("valor unitario do jogo: "))
          ^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
File "XXXX", line 5
    valor unitario = float(input("valor unitario do jogo: "))
          ^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
File "XXXX", line 5
    valor unitario = float(input("valor unitario do jogo: "))
          ^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
File "XXXX", line 5
    valor unitario = float(input("valor unitario do jogo: "))
          ^^^^^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 22:21:22)
-- CODE: 
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
????? = float(input("Qual o valor unitario do jogo? "))
????? = float(input("Qual o valor diposnivel para a aquisicao dos jogos? "))

# Calculo do valor a ser pago, incluindo o frete:
total = ?????
saldo = ???

# Impressao do valor total e do saldo:
print(?????)
print(?????)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
File "XXXX", line 5
    ????? = float(input("Qual o valor unitario do jogo? "))
    ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
File "XXXX", line 5
    ????? = float(input("Qual o valor unitario do jogo? "))
    ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
File "XXXX", line 5
    ????? = float(input("Qual o valor unitario do jogo? "))
    ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
File "XXXX", line 5
    ????? = float(input("Qual o valor unitario do jogo? "))
    ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
File "XXXX", line 5
    ????? = float(input("Qual o valor unitario do jogo? "))
    ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
File "XXXX", line 5
    ????? = float(input("Qual o valor unitario do jogo? "))
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 22:54:16)
-- CODE: 
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
valor unitario = float(input("Qual o valor unitario do jogo?: "))
valor disponivel = float(input("Qual o valor diposnivel para a aquisicao dos jogos?: "))

# Calculo do valor a ser pago, incluindo o frete:
total = valor unitario * 8 + 45
saldo = valor disponivel - total

# Impressao do valor total e do saldo:
print(round(total, 1))
print(round(saldo, 1))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
File "XXXX", line 5
    valor unitario = float(input("Qual o valor unitario do jogo?: "))
          ^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
File "XXXX", line 5
    valor unitario = float(input("Qual o valor unitario do jogo?: "))
          ^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
File "XXXX", line 5
    valor unitario = float(input("Qual o valor unitario do jogo?: "))
          ^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
File "XXXX", line 5
    valor unitario = float(input("Qual o valor unitario do jogo?: "))
          ^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
File "XXXX", line 5
    valor unitario = float(input("Qual o valor unitario do jogo?: "))
          ^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
File "XXXX", line 5
    valor unitario = float(input("Qual o valor unitario do jogo?: "))
          ^^^^^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 22:52:31)
-- CODE: 
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
valor unitario = float(input("Qual o valor unitario do jogo?: "))
valor disponivel = float(input("Qual o valor diposnivel para a aquisicao dos jogos?: "))

# Calculo do valor a ser pago, incluindo o frete:
total = valor unitario * 8 + 45
saldo = valor disponivel - total

# Impressao do valor total e do saldo:
print(round(total, 1))
print(round(saldo, 1))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
File "XXXX", line 5
    valor unitario = float(input("Qual o valor unitario do jogo?: "))
          ^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
File "XXXX", line 5
    valor unitario = float(input("Qual o valor unitario do jogo?: "))
          ^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
File "XXXX", line 5
    valor unitario = float(input("Qual o valor unitario do jogo?: "))
          ^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
File "XXXX", line 5
    valor unitario = float(input("Qual o valor unitario do jogo?: "))
          ^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
File "XXXX", line 5
    valor unitario = float(input("Qual o valor unitario do jogo?: "))
          ^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
File "XXXX", line 5
    valor unitario = float(input("Qual o valor unitario do jogo?: "))
          ^^^^^^^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 22:57:39)
-- CODE: 
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
unitario = float(input("valor unitario do jogo: "))
disponivel = float(input("valor diposnivel para a aquisicao dos jogos: "))

# Calculo do valor a ser pago, incluindo o frete:
total = unitario * 8 + 45
saldo = disponivel - total

# Impressao do valor total e do saldo:
print(round(total, 1))
print(round(saldo, 1))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
---- user output:
55.0
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
---- user output:
1.0
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
---- user output:
1307.0
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
---- user output:
8059.0
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
---- user output:
15.4
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
---- user output:
195.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 22:43:31)
-- CODE: 
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
valor unitario = float(input("Qual o valor unitario do jogo? "))
valor disponivel = float(input("Qual o valor diposnivel para a aquisicao dos jogos? "))

# Calculo do valor a ser pago, incluindo o frete:
total = valor unitario * 8 + 45
saldo = valor disponivel - total

# Impressao do valor total e do saldo:
print(round(total ,1))
print(round(saldo ,1))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
File "XXXX", line 5
    valor unitario = float(input("Qual o valor unitario do jogo? "))
          ^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
File "XXXX", line 5
    valor unitario = float(input("Qual o valor unitario do jogo? "))
          ^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
File "XXXX", line 5
    valor unitario = float(input("Qual o valor unitario do jogo? "))
          ^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
File "XXXX", line 5
    valor unitario = float(input("Qual o valor unitario do jogo? "))
          ^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
File "XXXX", line 5
    valor unitario = float(input("Qual o valor unitario do jogo? "))
          ^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
File "XXXX", line 5
    valor unitario = float(input("Qual o valor unitario do jogo? "))
          ^^^^^^^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 22:40:37)
-- CODE: 
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
valor unitario = float(input("Qual o valor unitario do jogo? "))
valor disponivel = float(input("Qual o valor diposnivel para a aquisicao dos jogos? "))

# Calculo do valor a ser pago, incluindo o frete:
total = valor unitario * 8 + 45
saldo = valor disponivel

# Impressao do valor total e do saldo:
print(round(total))
print(round(saldo))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
File "XXXX", line 5
    valor unitario = float(input("Qual o valor unitario do jogo? "))
          ^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
File "XXXX", line 5
    valor unitario = float(input("Qual o valor unitario do jogo? "))
          ^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
File "XXXX", line 5
    valor unitario = float(input("Qual o valor unitario do jogo? "))
          ^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
File "XXXX", line 5
    valor unitario = float(input("Qual o valor unitario do jogo? "))
          ^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
File "XXXX", line 5
    valor unitario = float(input("Qual o valor unitario do jogo? "))
          ^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
File "XXXX", line 5
    valor unitario = float(input("Qual o valor unitario do jogo? "))
          ^^^^^^^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 22:40:39)
-- CODE: 
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
valor unitario = float(input("Qual o valor unitario do jogo? "))
valor disponivel = float(input("Qual o valor diposnivel para a aquisicao dos jogos? "))

# Calculo do valor a ser pago, incluindo o frete:
total = valor unitario * 8 + 45
saldo = valor disponivel

# Impressao do valor total e do saldo:
print(round(total))
print(round(saldo))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
File "XXXX", line 5
    valor unitario = float(input("Qual o valor unitario do jogo? "))
          ^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
File "XXXX", line 5
    valor unitario = float(input("Qual o valor unitario do jogo? "))
          ^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
File "XXXX", line 5
    valor unitario = float(input("Qual o valor unitario do jogo? "))
          ^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
File "XXXX", line 5
    valor unitario = float(input("Qual o valor unitario do jogo? "))
          ^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
File "XXXX", line 5
    valor unitario = float(input("Qual o valor unitario do jogo? "))
          ^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
File "XXXX", line 5
    valor unitario = float(input("Qual o valor unitario do jogo? "))
          ^^^^^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 22:54:14)
-- CODE: 
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
valor unitario = float(input("Qual o valor unitario do jogo?: "))
valor disponivel = float(input("Qual o valor diposnivel para a aquisicao dos jogos?: "))

# Calculo do valor a ser pago, incluindo o frete:
total = valor unitario * 8 + 45
saldo = valor disponivel - total

# Impressao do valor total e do saldo:
print(round(total, 1))
print(round(saldo, 1))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
File "XXXX", line 5
    valor unitario = float(input("Qual o valor unitario do jogo?: "))
          ^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
File "XXXX", line 5
    valor unitario = float(input("Qual o valor unitario do jogo?: "))
          ^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
File "XXXX", line 5
    valor unitario = float(input("Qual o valor unitario do jogo?: "))
          ^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
File "XXXX", line 5
    valor unitario = float(input("Qual o valor unitario do jogo?: "))
          ^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
File "XXXX", line 5
    valor unitario = float(input("Qual o valor unitario do jogo?: "))
          ^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
File "XXXX", line 5
    valor unitario = float(input("Qual o valor unitario do jogo?: "))
          ^^^^^^^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 22:52:30)
-- CODE: 
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
valor unitario = float(input("Qual o valor unitario do jogo?: "))
valor disponivel = float(input("Qual o valor diposnivel para a aquisicao dos jogos?: "))

# Calculo do valor a ser pago, incluindo o frete:
total = valor unitario * 8 + 45
saldo = valor disponivel - total

# Impressao do valor total e do saldo:
print(round(total, 1))
print(round(saldo, 1))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
File "XXXX", line 5
    valor unitario = float(input("Qual o valor unitario do jogo?: "))
          ^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
File "XXXX", line 5
    valor unitario = float(input("Qual o valor unitario do jogo?: "))
          ^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
File "XXXX", line 5
    valor unitario = float(input("Qual o valor unitario do jogo?: "))
          ^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
File "XXXX", line 5
    valor unitario = float(input("Qual o valor unitario do jogo?: "))
          ^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
File "XXXX", line 5
    valor unitario = float(input("Qual o valor unitario do jogo?: "))
          ^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
File "XXXX", line 5
    valor unitario = float(input("Qual o valor unitario do jogo?: "))
          ^^^^^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 22:52:10)
-- CODE: 
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
valor unitario = float(input("Qual o valor unitario do jogo?: "))
valor disponivel = float(input("Qual o valor diposnivel para a aquisicao dos jogos?: "))

# Calculo do valor a ser pago, incluindo o frete:
total = valor unitario * 8 + 45
saldo = valor disponivel - total

# Impressao do valor total e do saldo:
print(round(total ,1))
print(round(saldo ,1))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
File "XXXX", line 5
    valor unitario = float(input("Qual o valor unitario do jogo?: "))
          ^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
File "XXXX", line 5
    valor unitario = float(input("Qual o valor unitario do jogo?: "))
          ^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
File "XXXX", line 5
    valor unitario = float(input("Qual o valor unitario do jogo?: "))
          ^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
File "XXXX", line 5
    valor unitario = float(input("Qual o valor unitario do jogo?: "))
          ^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
File "XXXX", line 5
    valor unitario = float(input("Qual o valor unitario do jogo?: "))
          ^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
File "XXXX", line 5
    valor unitario = float(input("Qual o valor unitario do jogo?: "))
          ^^^^^^^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 22:42:23)
-- CODE: 
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
valor unitario = float(input("Qual o valor unitario do jogo? "))
valor disponivel = float(input("Qual o valor diposnivel para a aquisicao dos jogos? "))

# Calculo do valor a ser pago, incluindo o frete:
total = valor unitario * 8 + 45
saldo = valor disponivel - total

# Impressao do valor total e do saldo:
print(round(total ,1))
print(round(saldo ,1))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
File "XXXX", line 5
    valor unitario = float(input("Qual o valor unitario do jogo? "))
          ^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
File "XXXX", line 5
    valor unitario = float(input("Qual o valor unitario do jogo? "))
          ^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
File "XXXX", line 5
    valor unitario = float(input("Qual o valor unitario do jogo? "))
          ^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
File "XXXX", line 5
    valor unitario = float(input("Qual o valor unitario do jogo? "))
          ^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
File "XXXX", line 5
    valor unitario = float(input("Qual o valor unitario do jogo? "))
          ^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
File "XXXX", line 5
    valor unitario = float(input("Qual o valor unitario do jogo? "))
          ^^^^^^^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 22:55:08)
-- CODE: 
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
valor unitario = float(input("valor unitario do jogo: "))
valor disponivel = float(input("valor diposnivel para a aquisicao dos jogos: "))

# Calculo do valor a ser pago, incluindo o frete:
total = valor unitario * 8 + 45
saldo = valor disponivel - total

# Impressao do valor total e do saldo:
print(round(total, 1))
print(round(saldo, 1))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
File "XXXX", line 5
    valor unitario = float(input("valor unitario do jogo: "))
          ^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
File "XXXX", line 5
    valor unitario = float(input("valor unitario do jogo: "))
          ^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
File "XXXX", line 5
    valor unitario = float(input("valor unitario do jogo: "))
          ^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
File "XXXX", line 5
    valor unitario = float(input("valor unitario do jogo: "))
          ^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
File "XXXX", line 5
    valor unitario = float(input("valor unitario do jogo: "))
          ^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
File "XXXX", line 5
    valor unitario = float(input("valor unitario do jogo: "))
          ^^^^^^^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 22:55:43)
-- CODE: 
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
valor unitario = float(input("valor unitario do jogo: "))
valor disponivel = float(input("valor diposnivel para a aquisicao dos jogos: "))

# Calculo do valor a ser pago, incluindo o frete:
total = valor unitario * 8 + 45
saldo = valor disponivel - total

# Impressao do valor total e do saldo:
print(round(total, 1))
print(round(saldo, 1))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
File "XXXX", line 5
    valor unitario = float(input("valor unitario do jogo: "))
          ^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
File "XXXX", line 5
    valor unitario = float(input("valor unitario do jogo: "))
          ^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
File "XXXX", line 5
    valor unitario = float(input("valor unitario do jogo: "))
          ^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
File "XXXX", line 5
    valor unitario = float(input("valor unitario do jogo: "))
          ^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
File "XXXX", line 5
    valor unitario = float(input("valor unitario do jogo: "))
          ^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
File "XXXX", line 5
    valor unitario = float(input("valor unitario do jogo: "))
          ^^^^^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
